syntax = "proto3";
package commission;
option go_package = "xtek/exchange/__SERVICE_NAME__/pb/commission";

import "google/api/annotations.proto";
import "commission/dto/user.proto";

service UserSiteService {
  rpc GetUserCommissions(dto.GetUserCommissionsRequest)
      returns (dto.GetUserCommissionsResponse) {
    option (google.api.http) = {
      get : "/v1/commissions"
    };
  }

  rpc GetMembersByUserID(dto.GetMembersByUserIDRequest)
      returns (dto.GetMembersByUserIDResponse) {
    option (google.api.http) = {
      get : "/v1/{userID}/members"
    };
  }
}