syntax = "proto3";
package dto;

option go_package = "xtek/exchange/__SERVICE_NAME__/pb/commission/dto";

import "paginate/paginate.proto";
import "commission/types/commission.proto";
import "validate/validate.proto";

message GetUserCommissionsRequest {
  message Filter {
    types.CommissionType comType = 1;
    int32 status = 4;
  }
  Filter filters = 1;
  paginate.PaginateRequest pagination = 2
      [ (validate.rules).message.required = true ];
}

message GetUserCommissionsResponse {
  repeated types.Commission listings = 1;
  paginate.PaginateResponse pagination = 2;
}

message GetMembersByUserIDResponse {
  repeated types.User users = 1;
}

message GetMembersByUserIDRequest {
  string userID = 1;
}